--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: CV
-url: 'http://webjeda.com'
+title: Pedro do Vale - CV
+url: 'https://pedrodovale.github.io/online-cv'
 
 #change it according to your repository name
 # disabling since we are using a custom domain
-#baseurl: '/online-cv' 
+# baseurl: '/online-cv' 
 
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
